src/task2/antlr_files/AutomataParser.py
# Generated from Automata.g4 by ANTLR 4.10
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AutomataParser ( Parser ):

    grammarFileName = "Automata.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'\"'", "':'", "','", "'['", 
                     "']'", "'\"glossary\"'", "'\"states\"'", "'\"initial_state\"'", 
                     "'\"terminal_states\"'", "'\"is_dfa\"'", "'\"edges\"'", 
                     "'\"edges_epsilon\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "O", "B", "C", 
                      "WS" ]

    RULE_s = 0
    RULE_lp = 1
    RULE_a = 2
    RULE_lao = 3
    RULE_lc = 4
    RULE_ee = 5
    RULE_eo = 6
    RULE_ll = 7

    ruleNames =  [ "s", "lp", "a", "lao", "lc", "ee", "eo", "ll" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    O=15
    B=16
    C=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lp(self):
            return self.getTypedRuleContext(AutomataParser.LpContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS" ):
                return visitor.visitS(self)
            else:
                return visitor.visitChildren(self)




    def s(self):

        localctx = AutomataParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(AutomataParser.T__0)
            self.state = 17
            self.lp()
            self.state = 18
            self.match(AutomataParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(AutomataParser.C, 0)

        def a(self):
            return self.getTypedRuleContext(AutomataParser.AContext,0)


        def lp(self):
            return self.getTypedRuleContext(AutomataParser.LpContext,0)


        def lao(self):
            return self.getTypedRuleContext(AutomataParser.LaoContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_lp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLp" ):
                listener.enterLp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLp" ):
                listener.exitLp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLp" ):
                return visitor.visitLp(self)
            else:
                return visitor.visitChildren(self)




    def lp(self):

        localctx = AutomataParser.LpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lp)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.match(AutomataParser.T__2)
                self.state = 21
                self.match(AutomataParser.C)
                self.state = 22
                self.match(AutomataParser.T__2)
                self.state = 23
                self.match(AutomataParser.T__3)
                self.state = 24
                self.match(AutomataParser.T__0)
                self.state = 25
                self.a()
                self.state = 26
                self.match(AutomataParser.T__1)
                self.state = 27
                self.match(AutomataParser.T__4)
                self.state = 28
                self.lp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.match(AutomataParser.T__2)
                self.state = 31
                self.match(AutomataParser.C)
                self.state = 32
                self.match(AutomataParser.T__2)
                self.state = 33
                self.match(AutomataParser.T__3)
                self.state = 34
                self.match(AutomataParser.T__0)
                self.state = 35
                self.a()
                self.state = 36
                self.match(AutomataParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.match(AutomataParser.T__2)
                self.state = 39
                self.match(AutomataParser.C)
                self.state = 40
                self.match(AutomataParser.T__2)
                self.state = 41
                self.match(AutomataParser.T__3)
                self.state = 42
                self.match(AutomataParser.T__5)
                self.state = 43
                self.lao()
                self.state = 44
                self.match(AutomataParser.T__6)
                self.state = 45
                self.match(AutomataParser.T__4)
                self.state = 46
                self.lp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.match(AutomataParser.T__2)
                self.state = 49
                self.match(AutomataParser.C)
                self.state = 50
                self.match(AutomataParser.T__2)
                self.state = 51
                self.match(AutomataParser.T__3)
                self.state = 52
                self.match(AutomataParser.T__5)
                self.state = 53
                self.lao()
                self.state = 54
                self.match(AutomataParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutomataParser.LcContext)
            else:
                return self.getTypedRuleContext(AutomataParser.LcContext,i)


        def C(self):
            return self.getToken(AutomataParser.C, 0)

        def B(self):
            return self.getToken(AutomataParser.B, 0)

        def eo(self):
            return self.getTypedRuleContext(AutomataParser.EoContext,0)


        def ee(self):
            return self.getTypedRuleContext(AutomataParser.EeContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitA" ):
                return visitor.visitA(self)
            else:
                return visitor.visitChildren(self)




    def a(self):

        localctx = AutomataParser.AContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_a)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(AutomataParser.T__7)
            self.state = 59
            self.match(AutomataParser.T__3)
            self.state = 60
            self.match(AutomataParser.T__5)
            self.state = 61
            self.lc()
            self.state = 62
            self.match(AutomataParser.T__6)
            self.state = 63
            self.match(AutomataParser.T__4)
            self.state = 64
            self.match(AutomataParser.T__8)
            self.state = 65
            self.match(AutomataParser.T__3)
            self.state = 66
            self.match(AutomataParser.T__5)
            self.state = 67
            self.lc()
            self.state = 68
            self.match(AutomataParser.T__6)
            self.state = 69
            self.match(AutomataParser.T__4)
            self.state = 70
            self.match(AutomataParser.T__9)
            self.state = 71
            self.match(AutomataParser.T__3)
            self.state = 72
            self.match(AutomataParser.T__2)
            self.state = 73
            self.match(AutomataParser.C)
            self.state = 74
            self.match(AutomataParser.T__2)
            self.state = 75
            self.match(AutomataParser.T__4)
            self.state = 76
            self.match(AutomataParser.T__10)
            self.state = 77
            self.match(AutomataParser.T__3)
            self.state = 78
            self.match(AutomataParser.T__5)
            self.state = 79
            self.lc()
            self.state = 80
            self.match(AutomataParser.T__6)
            self.state = 81
            self.match(AutomataParser.T__4)
            self.state = 82
            self.match(AutomataParser.T__11)
            self.state = 83
            self.match(AutomataParser.T__3)
            self.state = 84
            self.match(AutomataParser.B)
            self.state = 85
            self.match(AutomataParser.T__4)
            self.state = 86
            self.match(AutomataParser.T__12)
            self.state = 87
            self.match(AutomataParser.T__3)
            self.state = 88
            self.match(AutomataParser.T__0)
            self.state = 89
            self.eo()
            self.state = 90
            self.match(AutomataParser.T__1)
            self.state = 91
            self.match(AutomataParser.T__4)
            self.state = 92
            self.match(AutomataParser.T__13)
            self.state = 93
            self.match(AutomataParser.T__3)
            self.state = 94
            self.match(AutomataParser.T__0)
            self.state = 95
            self.ee()
            self.state = 96
            self.match(AutomataParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a(self):
            return self.getTypedRuleContext(AutomataParser.AContext,0)


        def O(self):
            return self.getToken(AutomataParser.O, 0)

        def lao(self):
            return self.getTypedRuleContext(AutomataParser.LaoContext,0)


        def C(self):
            return self.getToken(AutomataParser.C, 0)

        def getRuleIndex(self):
            return AutomataParser.RULE_lao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLao" ):
                listener.enterLao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLao" ):
                listener.exitLao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLao" ):
                return visitor.visitLao(self)
            else:
                return visitor.visitChildren(self)




    def lao(self):

        localctx = AutomataParser.LaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lao)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(AutomataParser.T__0)
                self.state = 99
                self.a()
                self.state = 100
                self.match(AutomataParser.T__1)
                self.state = 101
                self.match(AutomataParser.T__4)
                self.state = 102
                self.match(AutomataParser.O)
                self.state = 103
                self.match(AutomataParser.T__4)
                self.state = 104
                self.lao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(AutomataParser.T__2)
                self.state = 107
                self.match(AutomataParser.C)
                self.state = 108
                self.match(AutomataParser.T__2)
                self.state = 109
                self.match(AutomataParser.T__4)
                self.state = 110
                self.match(AutomataParser.O)
                self.state = 111
                self.match(AutomataParser.T__4)
                self.state = 112
                self.lao()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(AutomataParser.T__0)
                self.state = 114
                self.a()
                self.state = 115
                self.match(AutomataParser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.match(AutomataParser.T__2)
                self.state = 118
                self.match(AutomataParser.C)
                self.state = 119
                self.match(AutomataParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(AutomataParser.C, 0)

        def lc(self):
            return self.getTypedRuleContext(AutomataParser.LcContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_lc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLc" ):
                listener.enterLc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLc" ):
                listener.exitLc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLc" ):
                return visitor.visitLc(self)
            else:
                return visitor.visitChildren(self)




    def lc(self):

        localctx = AutomataParser.LcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lc)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(AutomataParser.T__2)
                self.state = 123
                self.match(AutomataParser.C)
                self.state = 124
                self.match(AutomataParser.T__2)
                self.state = 125
                self.match(AutomataParser.T__4)
                self.state = 126
                self.lc()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(AutomataParser.T__2)
                self.state = 128
                self.match(AutomataParser.C)
                self.state = 129
                self.match(AutomataParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(AutomataParser.C, 0)

        def lc(self):
            return self.getTypedRuleContext(AutomataParser.LcContext,0)


        def ee(self):
            return self.getTypedRuleContext(AutomataParser.EeContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_ee

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEe" ):
                listener.enterEe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEe" ):
                listener.exitEe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEe" ):
                return visitor.visitEe(self)
            else:
                return visitor.visitChildren(self)




    def ee(self):

        localctx = AutomataParser.EeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ee)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(AutomataParser.T__2)
                self.state = 134
                self.match(AutomataParser.C)
                self.state = 135
                self.match(AutomataParser.T__2)
                self.state = 136
                self.match(AutomataParser.T__3)
                self.state = 137
                self.match(AutomataParser.T__5)
                self.state = 138
                self.lc()
                self.state = 139
                self.match(AutomataParser.T__6)
                self.state = 140
                self.match(AutomataParser.T__4)
                self.state = 141
                self.ee()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(AutomataParser.T__2)
                self.state = 144
                self.match(AutomataParser.C)
                self.state = 145
                self.match(AutomataParser.T__2)
                self.state = 146
                self.match(AutomataParser.T__3)
                self.state = 147
                self.match(AutomataParser.T__5)
                self.state = 148
                self.lc()
                self.state = 149
                self.match(AutomataParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(AutomataParser.C, 0)

        def ll(self):
            return self.getTypedRuleContext(AutomataParser.LlContext,0)


        def eo(self):
            return self.getTypedRuleContext(AutomataParser.EoContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_eo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEo" ):
                listener.enterEo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEo" ):
                listener.exitEo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEo" ):
                return visitor.visitEo(self)
            else:
                return visitor.visitChildren(self)




    def eo(self):

        localctx = AutomataParser.EoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eo)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(AutomataParser.T__2)
                self.state = 154
                self.match(AutomataParser.C)
                self.state = 155
                self.match(AutomataParser.T__2)
                self.state = 156
                self.match(AutomataParser.T__3)
                self.state = 157
                self.match(AutomataParser.T__5)
                self.state = 158
                self.ll()
                self.state = 159
                self.match(AutomataParser.T__6)
                self.state = 160
                self.match(AutomataParser.T__4)
                self.state = 161
                self.eo()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(AutomataParser.T__2)
                self.state = 164
                self.match(AutomataParser.C)
                self.state = 165
                self.match(AutomataParser.T__2)
                self.state = 166
                self.match(AutomataParser.T__3)
                self.state = 167
                self.match(AutomataParser.T__5)
                self.state = 168
                self.ll()
                self.state = 169
                self.match(AutomataParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self, i:int=None):
            if i is None:
                return self.getTokens(AutomataParser.C)
            else:
                return self.getToken(AutomataParser.C, i)

        def ll(self):
            return self.getTypedRuleContext(AutomataParser.LlContext,0)


        def getRuleIndex(self):
            return AutomataParser.RULE_ll

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLl" ):
                listener.enterLl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLl" ):
                listener.exitLl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLl" ):
                return visitor.visitLl(self)
            else:
                return visitor.visitChildren(self)




    def ll(self):

        localctx = AutomataParser.LlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ll)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(AutomataParser.T__5)
                self.state = 174
                self.match(AutomataParser.T__2)
                self.state = 175
                self.match(AutomataParser.C)
                self.state = 176
                self.match(AutomataParser.T__2)
                self.state = 177
                self.match(AutomataParser.T__4)
                self.state = 178
                self.match(AutomataParser.T__2)
                self.state = 179
                self.match(AutomataParser.C)
                self.state = 180
                self.match(AutomataParser.T__2)
                self.state = 181
                self.match(AutomataParser.T__6)
                self.state = 182
                self.match(AutomataParser.T__4)
                self.state = 183
                self.ll()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.match(AutomataParser.T__5)
                self.state = 185
                self.match(AutomataParser.T__2)
                self.state = 186
                self.match(AutomataParser.C)
                self.state = 187
                self.match(AutomataParser.T__2)
                self.state = 188
                self.match(AutomataParser.T__4)
                self.state = 189
                self.match(AutomataParser.T__2)
                self.state = 190
                self.match(AutomataParser.C)
                self.state = 191
                self.match(AutomataParser.T__2)
                self.state = 192
                self.match(AutomataParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





